[tool.poetry]
name = "ssp-toolkit"
version = "0.1.0"
description = ""
authors = ["Tom Camp <tom.camp@civicactions.com>"]
readme = "README.md"
packages = [
    {include = "tools"}
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
pyyaml = "^6.0.1"
pyyaml-include = "^1.3.1"
jinja2 = "^3.1.2"
md-toc = "^8.1.9"
rtyaml = "^1.0.0"
pydantic = "^1.10.12"
blinker = "^1.6.2"
slugify = "^0.0.1"
complianceio = {git = "https://github.com/CivicActions/compliance-io.git"}
pytest = "^7.4.0"
pypandoc = "^1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
createfiles = "tools.createfiles.createfiles:main"
creatematrix = "tools.creatematrix.creatematrix:main"
exportto = "tools.exportto.exportto:main"
makefamilies = "tools.makefamilies.makefamilies:main"
sop = "tools.sop.sop:main"
